--- a/www/public/ressources/styles/explore.css
+++ b/www/public/ressources/styles/explore.css
@@ -17,8 +17,8 @@
 	background-color: #2b426e;
 	margin-top: 4px;
 	margin-bottom: 4px;
-	padding-top: 8px;
-	padding-bottom: 8px;
+	padding-top: 10px;
+	padding-bottom: 10px;
 	padding-left: 8px !important;
 	border-radius: 2px;
 	display: block;
@@ -38,4 +38,9 @@
 
 #explorer span.explorer-file-pkg:hover {
     background-color: #b14440;
+}
+
+input[type=file] {
+	background-color: #2b2b2b;
+	padding-left: 0;
 }
