--- a/www/public/ressources/styles/run.css
+++ b/www/public/ressources/styles/run.css
@@ -20,7 +20,7 @@
     border: 1px solid #403f3f;
     border-radius: 2px;
     padding: 20px;
-    opacity: 1;
+    opacity: 0.8;
     background-color: #333333;
     -webkit-box-shadow: 0px 10px 13px -12px #000000, 0px 0px 10px 2px rgba(0,0,0,0.15); 
     box-shadow: 0px 10px 13px -12px #000000, 0px 0px 10px 2px rgb(0 0 0 / 15%);
@@ -80,6 +80,7 @@
     width: 100%;
     border: 1px solid #403f3f;
     border-radius: 2px;
+    border-collapse: separate;
     padding: 20px;
     margin-bottom: 20px;
     opacity: 0.80;
@@ -87,18 +88,17 @@
     -webkit-box-shadow: 0px 10px 13px -12px #000000, 0px 0px 10px 2px rgba(0,0,0,0.15); 
     box-shadow: 0px 10px 13px -12px #000000, 0px 0px 10px 2px rgb(0 0 0 / 15%);
 }
-.op-table tr {
-    height: 30px; /* hauteur des lignes du tableau des détails */
-}
 .op-table th {
     text-align: left;
     width: 30%;
     height: 22px;
     font-weight: normal;
+    vertical-align: middle;
 }
 .op-table td {
     opacity: 1;
     font-weight: bold !important;
+    /* padding: 8px 0px 8px 0px; */
 }
 .op-step-div {
     margin-bottom: 5px;
