--- a/www/public/ressources/styles/stats-hosts.css
+++ b/www/public/ressources/styles/stats-hosts.css
@@ -117,6 +117,12 @@
     box-shadow: 0px 1px 1px 0px rgb(0 0 0 / 50%) inset, 0px 2px 2px 0px rgb(109 109 109 / 20%);
 }
 
+.hosts-table td.host-additionnal-info span {
+    padding-top: 5px;
+    padding-bottom: 5px;
+    display: block;
+}
+
 .stats-access-table-request {
     white-space: normal;
 }
@@ -134,7 +140,7 @@
 .groups-list-container {
     display: grid;
     grid-gap: 10px;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(4, 1fr);
 }
 
 .groups-container .header-container {
